[gd_scene load_steps=12 format=3 uid="uid://1uac8by036so"]

[ext_resource type="Script" uid="uid://cv2cumafdwsfi" path="res://towers/eepy/eepy.gd" id="1_50u5x"]
[ext_resource type="Texture2D" uid="uid://dw875sxmq6gd6" path="res://towers/eepy/eye.png" id="2_50u5x"]
[ext_resource type="PackedScene" uid="uid://dna8jqxvyobm4" path="res://towers/targeting_component.tscn" id="3_guppl"]
[ext_resource type="PackedScene" uid="uid://chdbik0tn6opq" path="res://towers/hover_component.tscn" id="4_xiqwi"]
[ext_resource type="AudioStream" uid="uid://chpx5muxodwdw" path="res://sounds/mwowh.ogg" id="5_50u5x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_djf7p"]
atlas = ExtResource("2_50u5x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_guppl"]
atlas = ExtResource("2_50u5x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiqwi"]
atlas = ExtResource("2_50u5x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sahpy"]
atlas = ExtResource("2_50u5x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_pmoxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djf7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guppl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiqwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sahpy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7op0c"]
radius = 42.0119

[node name="Eepy" type="Node2D"]
script = ExtResource("1_50u5x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 2.5)
scale = Vector2(2.125, 2.15625)
sprite_frames = SubResource("SpriteFrames_pmoxn")
frame_progress = 0.168803

[node name="TargetingComponent" parent="." instance=ExtResource("3_guppl")]
target_range = 1e+06

[node name="HoverComponent" parent="." instance=ExtResource("4_xiqwi")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoverComponent"]
shape = SubResource("CircleShape2D_7op0c")

[node name="StrumPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_50u5x")
